Fix date in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 </main>
 <footer>
-	Last updated on {{ .Date }}
+	Last updated on {{ .GitInfo.AuthorDate }}
 </footer>
 <script src="/assets/vendor.js"></script>
 <script src="/assets/app.js"></script>
